freebsd_network: Use the correct buffer length in receive.

Should fix #18966.

Change-Id: I05e35ecbdc4c269501980c18cedfc69d99618ae6
Reviewed-on: https://review.haiku-os.org/c/haiku/+/7961
Reviewed-by: waddlesplash <waddlesplash@gmail.com>
(cherry picked from commit 813c5e2fdee3d506a77a7b265a227ef6f68c4ab8)
Reviewed-on: https://review.haiku-os.org/c/haiku/+/7976